--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,12 +5,12 @@
 <web-app>
     <display-name>Archetype Created Web Application</display-name>
 
-    <resource-ref>
+<!--    <resource-ref>
         <description>DB Connection</description>
         <res-ref-name>jdbc/testPool</res-ref-name>
         <res-type>javax.sql.DataSource</res-type>
         <res-auth>Container</res-auth>
-    </resource-ref>
+    </resource-ref>-->
 
 </web-app>
 
