--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,13 @@
 
     <dependencies>
 
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.78</version>
+        </dependency>
+
         <!-- Exclude JUnit 4 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
