--- a/pom.xml
+++ b/pom.xml
@@ -135,7 +135,7 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
 
-        <!-- <dependency>
+         <dependency>
              <groupId>org.springframework.boot</groupId>
              <artifactId>spring-boot-starter-security</artifactId>
          </dependency>
@@ -144,7 +144,7 @@
              <groupId>org.springframework.security</groupId>
              <artifactId>spring-security-test</artifactId>
              <scope>test</scope>
-         </dependency>-->
+         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
